# adflip

./: README.md  pyproject.toml
src/adflip/: __init__.py  cli.py  from_adf.py  to_adf.py
tests/: test_from_adf.py  test_roundtrip.py  test_to_adf.py
