[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adflip"
version = "0.1.0"
description = "Bidirectional converter between Atlassian Document Format (ADF) and Markdown with lossless Confluence directive support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Grochocinski" },
]
keywords = ["adf", "markdown", "confluence", "atlassian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "mistune>=3.0.0,<4",
]

[project.scripts]
adflip = "adflip.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
